statefulset_mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
      environment: test
  serviceName: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
        environment: test
    spec:
      containers:
      - name: mongodb
        image: mongo:5
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongodb-data
            mountPath: /data/db
        livenessProbe: &healthcheck
          exec:
            command:
              - /bin/sh
              - -c
              - mongo --port 27017 --eval "rs.status()" | grep -vq "REMOVED"
        readinessProbe:
          <<: *healthcheck
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        storageClassName: "gp2"
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
