deployment-dev.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: dev
  name: marketingsite-dev-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:700632024770:certificate/1abed4b6-5a71-4ca8-86b2-0ae5485ef8cc
    alb.ingress.kubernetes.io/group.name: parktoken
    alb.ingress.kubernetes.io/group.order: '1'
spec:
  rules:
    - host: test.parktoken.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: "marketingsite-dev-svc"
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: marketingsite-dev
  name: marketingsite-dev-svc
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: marketingsite-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: marketingsite-dev
  name: marketingsite-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketingsite-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: marketingsite-dev
    spec:
      containers:
      - image: 700632024770.dkr.ecr.us-west-2.amazonaws.com/dog-moon-base/marketingpage-dev:2022.03.13.18.20
        name: marketingsite-dev
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 250m
          requests:
            cpu: 100m
        livenessProbe: &HealthCheck
          httpGet:
            path: /
            port: 80
          periodSeconds: 30
        readinessProbe: *HealthCheck
